--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <p>Sign In</p>
+    Sign In
   </header>
   <main>
     <form action="#" method="post">
@@ -25,9 +25,8 @@
         </label>
       </fieldset>
     </form>
-    <div> <a href="">Forgot your password?</a> </div>
-    <br>
-    <div> <a href="">Cancel</a> </div>
-  </main> 
+    <a href="">Forgot your password?</a>
+    <a href="">Cancel</a>
+  </main>
 </body>
 </html>
