--- a/views/updates.html
+++ b/views/updates.html
@@ -1,1 +1,25 @@
-<!-- -->
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Coming Soon</title>
+</head>
+<body>
+  <section title="coming-soon">
+    <h1>Coming Soon</h1>
+    <form action="#" method="post">
+      <fieldset>
+        <legend>Sign up to receive updates on the progress of this project.</legend>
+        <label for="coming-soon-email">
+          <input id="coming-soon-email" type="text" placeholder="Email">
+        </label>
+        <label for="coming-soon-submit">
+          <input id="coming-soon-submit" type="submit" value="Submit">
+        </label>
+      </fieldset>
+    </form>
+  </section>
+</body>
+</html>
