--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -7,10 +7,8 @@
   <title>Sign In</title>
 </head>
 <body>
-  <header>
-    Sign In
-  </header>
-  <main>
+  <section title="sign-in">
+    <h1>Sign In</h1>
     <form action="#" method="post">
       <fieldset>
         <legend>Please enter your email and password</legend>
@@ -27,6 +25,6 @@
     </form>
     <a href="">Forgot your password?</a>
     <a href="">Cancel</a>
-  </main>
+  </section>
 </body>
 </html>
