--- a/views/updates.html
+++ b/views/updates.html
@@ -1,1 +1,27 @@
-<!-- -->
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Register</title>
+</head>
+<body>
+  <section title="volunteer-signup">
+    <h1>Want to volunteer with the GEM Network project?</h1>
+    <h4>Do you have programming or design skills? We would love your help!</h4>
+	<!--TODO: Verify a form is better than a mailto link -->
+    <form action="#" method="post">
+      <fieldset>
+        <legend>Contact Us</legend>
+        <label for="contact-us">
+          <input id="contact-us" type="text" placeholder="Email">
+        </label>
+        <label for="contact-us-submit">
+          <input id="contact-us-submit" type="submit" placeholder="Submit">
+        </label>
+      </fieldset>
+    </form>
+  </section>
+</body>
+</html>
