Updated index.html to match existing landing page.
Also renamed all GEM Network to GEM Movement.
Also added supporting logo.png image.

--- a/app/client/includes/_header.html
+++ b/app/client/includes/_header.html
@@ -8,7 +8,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="{{pathFor 'index'}}">The GEM Network</a>
+	      <a class="navbar-brand" href="{{pathFor 'index'}}">The GEM Movement</a>
 	    </div>
 	    <div class="collapse navbar-collapse">
 	    	{{#if currentUser}}
