Fixed indentation on files I touched before

--- a/app/client/views/public/index.html
+++ b/app/client/views/public/index.html
@@ -15,8 +15,7 @@
           Sign up to receive updates on the progress of this project.
         </legend>
         <label for="alpha-email">
-          <input id="coming-soon-email" type="email" name="emailAddress"
-                                                     class="" placeholder="e.g. example@hotmail.com">
+          <input id="coming-soon-email" type="email" name="emailAddress" class="" placeholder="e.g. example@hotmail.com">
         </label>
         <label for="alpha-email-submit">
           <button class="btn btn-success submit-btn" type="submit">Request Invite</button>
