Moved old views into meteor context
-the views were converted to templates
-css was empty so was removed
-Nothing is properly implemented on pages this was just a first step
into merging the two different development styles

--- a/app/client/views/public/coming-soon.html
+++ b/app/client/views/public/coming-soon.html
@@ -1,12 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Coming Soon</title>
-</head>
-<body>
+<template name="coming-soon">
   <section title="coming-soon">
     <h1>Coming Soon</h1>
     <form action="#" method="post">
@@ -21,5 +13,4 @@
       </fieldset>
     </form>
   </section>
-</body>
-</html>
+</template>
