--- a/app/client/views/public/register-modal.html
+++ b/app/client/views/public/register-modal.html
@@ -1,12 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Register Modal</title>
-</head>
-<body>
+<template name="register">
   <section title="Register Modal">
     <h1>Register</h1>
     <h4>Register to the GEM Network as:</h4>
@@ -20,5 +12,4 @@
     </div>
     <a href="">Cancel</a>
   </section>
-</body>
-</html>
+</template>
