--- a/app/client/views/public/updates.html
+++ b/app/client/views/public/updates.html
@@ -1,12 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Register</title>
-</head>
-<body>
+<template name="volunteer-signup">
   <section title="volunteer-signup">
     <h1>Want to volunteer with the GEM Network project?</h1>
     <h4>Do you have programming or design skills? We would love your help!</h4>
@@ -23,5 +15,4 @@
       </fieldset>
     </form>
   </section>
-</body>
-</html>
+</template>
