--- a/app/client/views/public/youth-profile-page.html
+++ b/app/client/views/public/youth-profile-page.html
@@ -1,12 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Youth Profile</title>
-</head>
-<body>
+<template name="youth-profile">
   <section title="youth-profile">
     <h2>Welcome to the Global Empowerment Mandala!</h2>
     <div><small>There are just a few things that we would like to know about you to get you started.</small></div>  
@@ -122,5 +114,4 @@
       </fieldset>
     </form>
   </section> 
-</body>
-</html>
+</template>
