--- a/app/client/views/public/sign-in.html
+++ b/app/client/views/public/sign-in.html
@@ -1,12 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sign In</title>
-</head>
-<body>
+<template name="signin">
   <section title="sign-in">
     <h1>Sign In</h1>
     <form action="#" method="post">
@@ -26,5 +18,4 @@
     <a href="">Forgot your password?</a>
     <a href="">Cancel</a>
   </section>
-</body>
-</html>
+</template>
