--- a/app/client/includes/_header.html
+++ b/app/client/includes/_header.html
@@ -32,8 +32,8 @@
         {{else}}
         <ul class="nav navbar-nav navbar-right">
           <!--<li>{{> loginButtons align="right"}}</li>-->
-          <!--<li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}">Login</a></li>-->
-          <!--<li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}">Sign Up</a></li>-->
+         <li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}">Login</a></li>
+          <li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}">Sign Up</a></li>
         </ul>
         {{/if}}
       </div> <!-- end .navbar-collapse -->
