--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -8,7 +8,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{pathFor 'coming-soon'}}">GEM</a>
+        <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
+        <a class="" href="{{pathFor 'coming-soon'}}"><img class="navbar-brand" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo"></a>
+        <!--<a class="navbar-brand" href="{{pathFor 'coming-soon'}}">The GEM Movement</a>-->
       </div>
       <div class="collapse navbar-collapse">
         {{#if currentUser}}
