Complete switch to FlowRouter and removal of IronRouter
Update routes-public and routes-authenticated
rm router/filters.cofee
Changed templates/layout-default.html for new template style
Changed header logout link
Moved startup files for client and server to their respective
directories
Registration is still largely untested and invites system is temporarily
broken.

--- a/app/packages/gemapp-core/lib/client/templates/layout-default.html
+++ b/app/packages/gemapp-core/lib/client/templates/layout-default.html
@@ -1,6 +1,6 @@
 <template name="layoutDefault">
-  {{>header}}
+  {{> Template.dynamic template=top}}
   <div class="container">
-    {{>yield}}
+    {{> Template.dynamic template=main}}
   </div>
 </template>
