Rebased onto flow-router. Fix commit after rebase

--- a/app/packages/gemapp-core/lib/client/templates/authenticated/settings.html
+++ b/app/packages/gemapp-core/lib/client/templates/authenticated/settings.html
@@ -12,7 +12,7 @@
         <img src="default.png" width="120" height="120" alt="default profile picture">
         <br>
         {{> test}}
-        {{> editYourAvatarModal}}
+        <!--{{> editYourAvatarModal}}-->
         <br>
         <br>
         <label for="profile-upload">
