--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -20,7 +20,7 @@
           {{> optRender name ='invitesPageButton'}}
           {{/if}}
           {{#if isInRole 'tester'}}
-          <li class="{{currentRoute 'profile'}}"><a href="{{pathFor 'profile'}}">Profile</a></li>
+          <li class="{{currentRoute 'settings'}}"><a href="{{pathFor 'settings'}}">Settings</a></li>
           {{/if}}
         </ul>
         <ul class="nav navbar-nav navbar-right">
