Email subscription form, temp css in index.html

--- a/app/packages/gemapp-core/lib/client/templates/index.html
+++ b/app/packages/gemapp-core/lib/client/templates/index.html
@@ -5,6 +5,38 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--mailchimp form style-->
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+	<style type="text/css">
+#mc_embed_signup{background:#efe; clear:left; font:14px Helvetica,Arial,sans-serif; }
+#mc_embed_signup .button:hover {    
+	color: #fff;
+    background-color: #449d44;
+    border-color: #398439;}
+#mc_embed_signup .button {
+    clear: both;
+    background-color: orange;
+	border: 1px solid black;
+    border-radius: 7px;
+	border-style: solid;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline;
+    font-family: 'arial';
+	font-size: 15px;
+    font-weight: normal;
+    height: 38px;
+    line-height: 32px;
+    margin: 10px 5px 10px 0;
+    padding: 0 22px;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: top;
+    white-space: nowrap;
+    width: auto;
+}</style>
+  <!--end of mailchimp form style-->
+
   <title>The GEM Movement</title>
 </head>
 
