--- a/app/packages/gemapp-core/lib/client/templates/public/coming-soon.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/coming-soon.html
@@ -12,38 +12,7 @@
     </p>
 
 	
-	
-	<!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#efe; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="//gemmovement.us1.list-manage.com/subscribe/post?u=9eae221f1d235ebbd8a749993&amp;id=d6335be721" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<h2>Sign up to receive updates on the progress of this project.</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9eae221f1d235ebbd8a749993_d6335be721" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
-	
-	
-	
+{{>mailchimp}}
 	
     
 	
@@ -51,18 +20,27 @@
   {{>optRender name='requestBetaInvite'}}
 </template>
 
-<template name="emailSub">
-	<form  method="post" class="emailSub" action="#" id="subscribeEmail">
-      <fieldset>
-        <legend>Subscribe to receive updates on the progress of this project.</legend>
-        <label for="subscribe-email">
-           <input class="the_email" id="subscribe-email" name="email" type="email" placeholder="e.g. example@hotmail.com">
-        </label>
-        <label for="subscribe-submit">
-		<button id="subscribe-submit" type="submit" value="Submit" class="emailSubmit">Submit</button>
-          
-        </label>
-      </fieldset>
-    </form>	
-	
+<template name="mailchimp">
+<!-- Begin MailChimp Signup Form -->
+
+	<div id="mc_embed_signup">
+	<form action="//gemmovement.us1.list-manage.com/subscribe/post?u=9eae221f1d235ebbd8a749993&amp;id=d6335be721" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		<div id="mc_embed_signup_scroll">
+			<h2>Sign up to receive updates on the progress of this project.</h2>
+			<div class="mc-field-group">
+				<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+				</label>
+				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+			</div>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9eae221f1d235ebbd8a749993_d6335be721" tabindex="-1" value=""></div>
+			<div class="clear"><button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">Subscribe</button></div>
+		</div>
+	</form>
+	</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
 </template>
