--- a/app/packages/gemapp-core/lib/client/stylesheets/views/public/_index.scss
+++ b/app/packages/gemapp-core/lib/client/stylesheets/views/public/_index.scss
@@ -9,6 +9,7 @@
   width: 100%;
 }
 
+
 body {
   font-family: 'Roboto', 'Trebuchet', 'Arial', sans-serif;
   font-size: 20px;
@@ -20,6 +21,14 @@ section {
   width: 65%;
   text-align: center;
 }
+
+
+columnsection{
+  margin: auto;
+  width:95%;
+  text-align: center;
+}
+
 
 h1 {
   font-size: 45px;
@@ -116,3 +125,4 @@ It handles resizing for Firefox, Chrome and IE.
   width: 100%;
   height: 100%;
 }
+
