--- a/app/packages/gemapp-core/lib/client/templates/public/coming-soon.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/coming-soon.html
@@ -1,27 +1,35 @@
 <template name="coming-soon">
-  <section class="center-block" title="coming-soon">
-    <img class="gem-logo-primary" src="/logo.png" alt="GEM Movement Logo">
-    <h1>Coming Soon</h1>
-    <p>The GEM Movement is a free web-based social media and crowdfunding platform that brings together youth, schools, organizations and green businesses to support each other in creating a sustainable and thriving planet.
-    <h1>How It Works</h1>
+  <section class="center-block" title="intro">
+    <p style="text-align:left"> Global Empowerment Mandala (GEM) is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their solutions for peace and make them a reality. One of the tools through which we do this is a social media platform that makes it inspiring and easy for young people to get involved. This virtual hub will be a space dedicated to sharing resources and expressing </p>
+
+    <h2>How It Works</h2>
     <div id="containingBlock">
       <div class="videoWrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8Z1TptOehAg" allowfullscreen></iframe>
       </div>
     </div>
-    </p>
-
-    <form action="#" method="post">
-      <fieldset>
-        <legend>Subscribe to receive updates on the progress of this project.</legend>
-        <label for="subscribe-email">
-          <input id="subscribe-email" type="text" placeholder="Email">
-        </label>
-        <label for="subscribe-submit">
-          <input id="subscribe-submit" type="submit" value="Submit">
-        </label>
-      </fieldset>
-    </form>
   </section>
-  {{>optRender name='requestBetaInvite'}}
+<columnsection class="center-block" title="columntext">
+<div class="row">
+  <div class="col-xs-12 col-sm-6 col-md-6">
+  <h2>Youth</h2>
+  </div> <!-- end .col-xs-12 -->
+  <div class="col-xs-12 col-sm-6 col-md-6">
+  <h2>Supporters</h2>
+  </div> <!-- end .col-xs-12 -->
+</div> <!-- end .row -->
+
+
+<div class="row">
+  <div class="col-xs-12 col-sm-6 col-md-6">
+  <p style="padding-right:100px; padding-left:100px"> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them a reality. <br><br>
+  Sound like you? </p>
+
+  </div> <!-- end .col-xs-12 -->
+  <div class="col-xs-12 col-sm-6 col-md-6">
+  <p style="padding-right:100px; padding-left:100px"> <br> <br> We are inviting pioneering leaders, community mentors, schools, non-profit organizations and eco-conscious companies to join GEM's philanthropic community network. Everyone who joins will be invited to support youth members by offering resources, mentorship, volunteer opportunities and any other gifts they find it within their hearts to provide.</p>
+  </div> <!-- end .col-xs-12 -->
+</div> <!-- end .row -->
+</columnsection>
 </template>
+
