--- a/app/packages/gemapp-core/lib/client/templates/layout-default.html
+++ b/app/packages/gemapp-core/lib/client/templates/layout-default.html
@@ -1,6 +1,6 @@
 <template name="layoutDefault">
   {{> Template.dynamic template=top}}
-  <div class="container">
+  <div class="container" style="width: 1475px;">
     {{> Template.dynamic template=main}}
   </div>
 </template>
