--- a/app/packages/gemapp-core/lib/client/templates/public/coming-soon.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/coming-soon.html
@@ -30,6 +30,21 @@
   <p style="padding-right:100px; padding-left:100px"> <br> <br> We are inviting pioneering leaders, community mentors, schools, non-profit organizations and eco-conscious companies to join GEM's philanthropic community network. Everyone who joins will be invited to support youth members by offering resources, mentorship, volunteer opportunities and any other gifts they find it within their hearts to provide.</p>
   </div> <!-- end .col-xs-12 -->
 </div> <!-- end .row -->
+<div class="row">
+ <div class="col-xs-12 col-sm-6 col-md-6">
+   <h3> Get Started </h3>
+  </div> <!-- end .col-xs-12 -->
+  <div class="col-xs-12 col-sm-6 col-md-6">
+       <h3> Get Started </h3>
+  </div> <!-- end .col-xs-12 -->
+</div> <!-- end .row -->
+
 </columnsection>
+<br><br>
+<div class="container" style="width:1475px; background-color: grey" >
+<h1 style="text-align:center"> Browse Projects</h1>
+</div>
+<br><br><br>
 </template>
+
 
