--- a/app/packages/gemapp-core/lib/client/templates/public/coming-soon.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/coming-soon.html
@@ -22,29 +22,30 @@
 
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-6">
-  <p style="padding-right:100px; padding-left:100px"> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them a reality. <br><br>
+  <p style="padding-right:150px; padding-left:150px"> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them a reality. <br><br>
   Sound like you? </p>
 
   </div> <!-- end .col-xs-12 -->
   <div class="col-xs-12 col-sm-6 col-md-6">
-  <p style="padding-right:100px; padding-left:100px"> <br> <br> We are inviting pioneering leaders, community mentors, schools, non-profit organizations and eco-conscious companies to join GEM's philanthropic community network. Everyone who joins will be invited to support youth members by offering resources, mentorship, volunteer opportunities and any other gifts they find it within their hearts to provide.</p>
+  <p style="padding-right:150px; padding-left:150px"> <br> <br> We are inviting pioneering leaders, community mentors, schools, non-profit organizations and eco-conscious companies to join GEM's philanthropic community network. Everyone who joins will be invited to support youth members by offering resources, mentorship, volunteer opportunities and any other gifts they find it within their hearts to provide.</p>
   </div> <!-- end .col-xs-12 -->
 </div> <!-- end .row -->
 <div class="row">
  <div class="col-xs-12 col-sm-6 col-md-6">
-   <h3> Get Started </h3>
+      <button type="button">Get Started</button> 
   </div> <!-- end .col-xs-12 -->
   <div class="col-xs-12 col-sm-6 col-md-6">
-       <h3> Get Started </h3>
+      <button type="button">Get Started</button> 
   </div> <!-- end .col-xs-12 -->
 </div> <!-- end .row -->
 
 </columnsection>
-<br><br>
-<div class="container" style="width:1475px; background-color: grey" >
-<h1 style="text-align:center"> Browse Projects</h1>
+
+<div class="container" style="width:1475px; height:175px; background-color: grey; margin-top:80px; margin-bottom:200px;" >
+ <h1 style="text-align:center; padding-top:35px"> Browse Projects</h1>
 </div>
-<br><br><br>
+
+
 </template>
 
 
