--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -1,17 +1,18 @@
 <template name="header">
-  <nav class="navbar navbar-default" role="navigation" style="background-color: rgb(238, 255, 238); border-color: rgb(238, 255, 238); padding-top: 30px; padding-bottom: 10px;">
-    <div class="container" style="width: 1375px">
+  <nav class="navbar navbar-default navbar-styling" role="navigation">
+    <div class="container headerContainer">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <button type="button" class="navbar-toggle collapsed" data-toggle=" collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
         <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
-        <a class="" href="{{pathFor 'coming-soon'}}"><img class="navbar-brand" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo" style="height: 150px;"> </a>
+        <a class="" href="{{pathFor 'coming-soon'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo"> </a>
         <!--<a class="navbar-brastyle="height: 150px;"nd" href="{{pathFor 'coming-soon'}}">The GEM Movement</a>-->
-      </div>
+      </div> <!--end of navbar-header -->
+
       <div class="collapse navbar-collapse">
         {{#if currentUser}}
         <ul class="nav navbar-nav" >
@@ -22,7 +23,7 @@
           {{#if isInRole 'tester'}}
           <li class="{{currentRoute 'profile'}}"><a href="{{pathFor 'profile'}}">Profile</a></li>
           {{/if}}
-        </ul>
+        </ul> 
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.emails.[0].address}} <span class="caret"></span></a>
@@ -30,19 +31,19 @@
               <li class="logout"><a href="{{pathFor 'login'}}">Logout</a></li>
             </ul>
           </li>
-        </ul>
+         </ul> 
         {{else}}
-        <ul class="nav navbar-nav" style="padding-left: 35px; padding-top: 35px;">
+        <ul class="nav navbar-nav gemHeading-styling">
         <h1> G.E.M Movement </h1>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right" style="padding-top:30px" >
+        <ul class="nav navbar-nav navbar-right navright-styling">
           <!--<li>{{> loginButtons align="right"}}</li>-->
-          <li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}"> <button type="button">Sign In</button> </a></li>
-          <li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}"><button type="button">Register</button></a></li>
-        </ul>
-        {{/if}}
+          <li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}"> <button class="button">Sign In</button> </a></li>
+          <li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}"><button class="button">Register</button></a></li>
+        </ul> 
+        {{/if}} <!-- end of if else currentUser -->
       </div> <!-- end .navbar-collapse -->
     </div> <!-- end .container-fluid -->
-  </nav>
+  </nav> 
 </template>
