changing title from coming-soon to landing-page, adding links to buttons

--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
         </button>
         <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
-        <a class="" href="{{pathFor 'coming-soon'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo"> </a>
+        <a class="" href="{{pathFor 'landing-page'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'landing-page'}}" src="/logo.png" alt="GEM Movement Logo"> </a>
         <!--<a class="navbar-brastyle="height: 150px;"nd" href="{{pathFor 'coming-soon'}}">The GEM Movement</a>-->
       </div> <!--end of navbar-header -->
 
