--- a/app/packages/gemapp-core/lib/client/stylesheets/views/public/_index.scss
+++ b/app/packages/gemapp-core/lib/client/stylesheets/views/public/_index.scss
@@ -148,6 +148,10 @@ margin-bottom:200px;
 .BrowseProjects-text{
   text-align:center; 
   padding-top:35px;
+  a{
+     text-decoration: none;
+     color: black;
+       }
 }
 
 .navbar-styling {
