--- a/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
@@ -30,10 +30,10 @@
 
  <div class="row">
    <div class="col-xs-12 col-sm-6 col-md-6">
-     <a class="{{currentRoute ''}}" href="{{pathFor 'introduction-youth'}}"><button class="button"> Get Started </button></a>
+     <a class="{{currentRoute 'introduction-youth'}}" href="{{pathFor 'introduction-youth'}}"><button class="button"> Get Started </button></a>
    </div> <!-- end .col-xs-12 -->
    <div class="col-xs-12 col-sm-6 col-md-6">
-     <a class="{{currentRoute ''}}" href="{{pathFor 'introduction-supporter'}}"><button class="button"> Get Started </button></a>
+     <a class="{{currentRoute 'introduction-supporter'}}" href="{{pathFor 'introduction-supporter'}}"><button class="button"> Get Started </button></a>
    </div> <!-- end .col-xs-12 -->
  </div> <!-- end .row -->
 
