fixed typos and BrowseProjects resizing

--- a/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
@@ -20,9 +20,11 @@
    </div> <!-- end .row -->
 
    <div class="row">
-     <div class="col-xs-12 col-sm-6 col-md-6 column-text">
+     <div class="col-xs-12 col-sm-6 col-md-6">
+      <div class="column-text-container column-text">
        <p> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them a reality. <br><br> Sound like you? </p>
      </div> <!-- end .col-xs-12 -->
+     </div>
      <div class="col-xs-12 col-sm-6 col-md-6 column-text">
        <p> <br> <br> We are inviting pioneering leaders, community mentors, schools, non-profit organizations and eco-conscious companies to join GEM's philanthropic community network. Everyone who joins will be invited to support youth members by offering resources, mentorship, volunteer opportunities and any other gifts they find it within their hearts to provide.</p>
      </div> <!-- end .col-xs-12 -->
