--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -1,8 +1,8 @@
 <template name="header">
   <nav class="navbar navbar-default navbar-styling" role="navigation">
-    <div class="container headerContainer">
+    <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle=" collapse" data-target="#bs-example-navbar-collapse-1">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -15,7 +15,7 @@
 
       <div class="collapse navbar-collapse">
         {{#if currentUser}}
-        <ul class="nav navbar-nav" >
+         <ul class="nav navbar-nav">
           <li class="{{currentRoute 'dashboard'}}"><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
           {{#if isInRole 'admin'}}
           {{> optRender name ='invitesPageButton'}}
@@ -23,25 +23,25 @@
           {{#if isInRole 'tester'}}
           <li class="{{currentRoute 'profile'}}"><a href="{{pathFor 'profile'}}">Profile</a></li>
           {{/if}}
-        </ul> 
-        <ul class="nav navbar-nav navbar-right">
+         </ul> 
+         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.emails.[0].address}} <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li class="logout"><a href="{{pathFor 'login'}}">Logout</a></li>
             </ul>
-          </li>
-         </ul> 
+           </li>
+          </ul> 
         {{else}}
-        <ul class="nav navbar-nav gemHeading-styling">
-        <h1> G.E.M Movement </h1>
-        </ul>
+         <ul class="nav navbar-nav gemHeading-styling">
+          <h1> G.E.M Movement </h1>
+         </ul>
 
-        <ul class="nav navbar-nav navbar-right navright-styling">
+         <ul class="nav navbar-nav navbar-right navright-styling ">
           <!--<li>{{> loginButtons align="right"}}</li>-->
           <li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}"> <button class="button">Sign In</button> </a></li>
           <li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}"><button class="button">Register</button></a></li>
-        </ul> 
+         </ul> 
         {{/if}} <!-- end of if else currentUser -->
       </div> <!-- end .navbar-collapse -->
     </div> <!-- end .container-fluid -->
