--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -1,6 +1,6 @@
 <template name="header">
   <nav class="navbar navbar-default navbar-styling" role="navigation">
-    <div class="container">
+   <div class="container-fluid" >
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
@@ -10,8 +10,10 @@
         </button>
         <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
         <a class="" href="{{pathFor 'landing-page'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'landing-page'}}" src="/logo.png" alt="GEM Movement Logo"> </a>
-        <!--<a class="navbar-brastyle="height: 150px;"nd" href="{{pathFor 'coming-soon'}}">The GEM Movement</a>-->
       </div> <!--end of navbar-header -->
+      <div class="nav navbar-nav gemHeading-styling">
+       <h1> G.E.M Movement </h1>
+      </div>
 
       <div class="collapse navbar-collapse">
         {{#if currentUser}}
@@ -33,17 +35,14 @@
            </li>
           </ul> 
         {{else}}
-         <ul class="nav navbar-nav gemHeading-styling">
-          <h1> G.E.M Movement </h1>
-         </ul>
 
-         <ul class="nav navbar-nav navbar-right navright-styling ">
+         <ul class="nav navbar-nav navbar-right navright-styling">
           <!--<li>{{> loginButtons align="right"}}</li>-->
           <li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}"> <button class="button">Sign In</button> </a></li>
           <li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}"><button class="button">Register</button></a></li>
          </ul> 
         {{/if}} <!-- end of if else currentUser -->
       </div> <!-- end .navbar-collapse -->
-    </div> <!-- end .container-fluid -->
-  </nav> 
+   </div> <!-- end of container-fluid -->
+  </nav>  <!-- end of navbar -->
 </template>
