--- a/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
@@ -1,5 +1,5 @@
 <template name="landing-page">
-  <section class="center-block text-left" title="intro">
+  <section class="text-left" title="intro">
     <p> Global Empowerment Mandala (GEM) is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their solutions for peace and make them a reality. One of the tools through which we do this is a social media platform that makes it inspiring and easy for young people to get involved. This virtual hub will be a space dedicated to sharing resources and expressing </p>
     <h2 class="text-center">How It Works</h2>
      <div id="containingBlock">
@@ -9,36 +9,19 @@
      </div>
   </section>
 
-  <columnsection class="center-block" title="columntext">
+  <columnsection title="columntext">
    <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-6">
       <h2>Youth</h2>
+      <p class="column-text"> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them a reality. <br><br> Sound like you? </p>
+      <a class="{{currentRoute 'introduction-youth'}}" href="{{pathFor 'introduction-youth'}}"><button class="button"> Get Started </button></a>
     </div> <!-- end .col-xs-12 -->
     <div class="col-xs-12 col-sm-6 col-md-6">
       <h2>Supporters</h2>
-    </div> <!-- end .col-xs-12 -->
-   </div> <!-- end .row -->
-
-   <div class="row">
-     <div class="col-xs-12 col-sm-6 col-md-6">
-      <div class="column-text-container column-text">
-       <p> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them a reality. <br><br> Sound like you? </p>
+      <p class="column-text"> <br> <br> We are inviting pioneering leaders, community mentors, schools, non-profit organizations and eco-conscious companies to join GEM's philanthropic community network. Everyone who joins will be invited to support youth members by offering resources, mentorship, volunteer opportunities and any other gifts they find it within their hearts to provide.</p>
+      <a class="{{currentRoute 'introduction-supporter'}}" href="{{pathFor 'introduction-supporter'}}"><button class="button"> Get Started </button></a>
      </div> <!-- end .col-xs-12 -->
-     </div>
-     <div class="col-xs-12 col-sm-6 col-md-6 column-text">
-       <p> <br> <br> We are inviting pioneering leaders, community mentors, schools, non-profit organizations and eco-conscious companies to join GEM's philanthropic community network. Everyone who joins will be invited to support youth members by offering resources, mentorship, volunteer opportunities and any other gifts they find it within their hearts to provide.</p>
-     </div> <!-- end .col-xs-12 -->
-   </div> <!-- end .row -->
-
- <div class="row">
-   <div class="col-xs-12 col-sm-6 col-md-6">
-     <a class="{{currentRoute 'introduction-youth'}}" href="{{pathFor 'introduction-youth'}}"><button class="button"> Get Started </button></a>
-   </div> <!-- end .col-xs-12 -->
-   <div class="col-xs-12 col-sm-6 col-md-6">
-     <a class="{{currentRoute 'introduction-supporter'}}" href="{{pathFor 'introduction-supporter'}}"><button class="button"> Get Started </button></a>
-   </div> <!-- end .col-xs-12 -->
- </div> <!-- end .row -->
-
+   </div>  
  </columnsection>
 
 <div class="BrowseProjects-Container">
