--- a/app/packages/gemapp-core/lib/client/stylesheets/views/public/_index.scss
+++ b/app/packages/gemapp-core/lib/client/stylesheets/views/public/_index.scss
@@ -21,10 +21,14 @@ section {
   text-align: center;
 }
 
-columnsection {
+columnsection{
   margin: auto;
-  width:80%;
+  width: 80%;
   text-align: center;
+  h2,p{
+  padding-right:80px;
+  padding-left:80px;
+  }
 }
 
 h1 {
@@ -124,50 +128,34 @@ It handles resizing for Firefox, Chrome and IE.
 }
 
 .BrowseProjects-Container{
-width:100%; 
 height:175px; 
 background-color: grey;
-border: 2px solid #666;
 margin-top:80px; 
 margin-bottom:200px;
-}
-
-.BrowseProjects-text{
-  text-align:center; 
-  padding-top:35px;
-  a{
+text-align:center; 
+a{
      text-decoration: none;
      color: black;
-   }
+ }
+ h1{ padding-top:55px;}
 }
 
-.column-text{
-  padding-right:80px;
-  padding-left:80px;
-}
-
-.navbar-styling {
-   background-color: rgb(238, 255, 238);
-   border-color: rgb(238, 255, 238); 
-}
-
-.gemHeading-styling {
- padding-left: 145px;
- padding-top: 35px;
-}
-
-.navright-styling {
+.nav-styling{
   padding-top:30px;
-  padding-right:100px;
+  background-color: rgb(238, 255, 238);
+  border-color: rgb(238, 255, 238); 
+  h1{
+  padding-left:85px;
+  padding-top:50px;
+  }
 }
 
 .logo-styling{
-  height: 150px;
+  height: 175px;
 }
 
 .button {
   padding:5px;
-  background-color: #dcdcdc;
   border: 1px solid #666;
   box-shadow: 3px 3px 3px #888888;
   color:#000;
