Refactored/removed dependency on betatoken package
This effectively removes the feature. In beta-tokens.coffee there is still some
work if we want to re-enable that feature.

--- a/app/packages/gemapp-core/lib/client/templates/public/signup.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/signup.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-sm-6 col-md-4">
       <h3 class="page-header">Sign Up to Join the GEM Network</h3>
       <form id="application-signup" class="signup">
-        {{> betaSignup}}
+        {{> optRender name ='betaSignup'}}
         <label for="accountType">Account Type</label>
         <div class="form-group">
           <input type=radio name="Youth" value="youth"> Youth<br>
