--- a/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
@@ -9,11 +9,10 @@
         </div>
       </div>
     </div>
-
     <div class="row text-center">
       <div class="col-xs-12 col-sm-6 col-md-6">
         <h2>Youth</h2>
-        <p> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them</p>
+        <p> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them a reality. <br>Sound like you?</p>
         <a class="{{currentRoute 'introduction-youth'}}" href="{{pathFor 'introduction-youth'}}"><button class="button"> Get Started </button></a>
       </div> <!-- end .col-xs-12 -->
       <div class="col-xs-12 col-sm-6 col-md-6">
@@ -22,7 +21,6 @@
         <a class="{{currentRoute 'introduction-supporter'}}" href="{{pathFor 'introduction-supporter'}}"><button class="button"> Get Started </button></a>
       </div> <!-- end .col-xs-12 -->
     </div> <!-- end of row -->
-
     <div class="BrowseProjects">
       <h1><a class="{{currentRoute 'project'}}" href="{{pathFor 'project'}}"> Browse Projects </a> </h1>
     </div>
