Bug: Bootstrap header menu doesn't work on small screens.(aka when it changes to dropdown)

--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -16,7 +16,7 @@
        <h1> G.E.M Movement 111 </h1>
       </div>
 
-      <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         {{#if currentUser}}
          <ul class="nav navbar-nav">
           <li class="{{currentRoute 'dashboard'}}"><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
