--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -13,7 +13,7 @@
       </div> <!--end of navbar-header -->
       
       <div class="nav navbar-nav">
-       <h1> G.E.M Movement 111 </h1>
+       <h1> G.E.M Movement </h1>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
