--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
         </button>
         <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
-        <a href="#">Enter</a>
+        <a href="#">ENTER</a>
       </div> <!--end of navbar-header -->
       <div class="collapse navbar-collapse">
         {{#if currentUser}}
