--- a/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6">
       <h2>GLOBAL EMPOWERMENT MANDALA</h2><h3>Inspired youth, global change</h3>  
-      <button> Try it Now </button> <br>
+      <button> Try it Now </button> <br><br>
       <button> Discover Projects </button>
     </div>
    </div>   
@@ -25,20 +25,20 @@
    </div> 
    <div class="row">
     <div div class="col-xs-12 col-sm-3 col-md-3">
-     <h3>Time</h3><img src="/time.png" alt="Clock image"> 
+     <h3>TIME</h3><img src="/time.png" alt="Clock image"> 
     </div>
     <div div class="col-xs-12 col-sm-3 col-md-3">
-     <h3>Professional Services</h3><img src="/Pro_services.png" alt="Professional Services Image"> 
+     <h3>PROFESSIONAL SERVICES</h3><img src="/Pro_services.png" alt="Professional Services Image"> 
     </div>
     <div div class="col-xs-12 col-sm-3 col-md-3">
-     <h3>Materials</h3><img src="/Materials.png" alt="Box Image"> 
+     <h3>MATERIALS</h3><img src="/Materials.png" alt="Box Image"> 
     </div>
     <div div class="col-xs-12 col-sm-3 col-md-3">
-     <h3>Money</h3><img src="/money.png" alt="Money Image"> 
+     <h3>MONEY</h3><img src="/money.png" alt="Money Image"> 
     </div>
    </div>
    <div class="row">
-     <h2>To take youth's creative ideas and make them into Successful projects!</h2>
+     <h2>To take youth's creative <img src="/bulb.png" alt="bulb image"> ideas and make them into Successful <img src="/apple.png" alt="apple image"> projects!</h2> 
    </div>
   </div> <!--end container-->
 </template>
