--- a/app/packages/gemapp-core/lib/client/stylesheets/views/public/_index.scss
+++ b/app/packages/gemapp-core/lib/client/stylesheets/views/public/_index.scss
@@ -139,3 +139,13 @@ h1,h2,h3 {color: white;}
   box-shadow: 3px 3px 3px #888888;
   color:#000;
 }
+
+@media (max-width: 1200px) {
+  .BrowseProjects 
+  {height: 460px;}
+}
+
+@media (max-width: 600px) {
+  .BrowseProjects 
+  {height: 660px;}
+}
