--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-  <nav class="navbar navbar-default nav-styling" role="navigation">
+  <nav class="navbar navbar-default nav-styling grey-font" role="navigation">
    <div class="container-fluid" >
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
         </button>
         <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
-        <a href="#">ENTER</a>
+        <a href="#">enter</a>
       </div> <!--end of navbar-header -->
       <div class="collapse navbar-collapse">
         {{#if currentUser}}
@@ -35,8 +35,8 @@
          <ul class="nav navbar-nav navbar-right">
           <!--<li>{{> loginButtons align="right"}}</li>-->
            <li><a class="" href="{{pathFor 'landing-page'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'landing-page'}}" src="/gemlogo.png" alt="GEM Movement Logo"> </a></li>
-           <li><a href="#">Hug</a></li>
-           <li><a href="#">Share</a></li>
+           <li><a href="#">hug</a></li>
+           <li><a href="#">share</a></li>
          </ul>
         {{/if}} <!-- end of if else currentUser -->
       </div> <!-- end .navbar-collapse -->
